--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,56 @@
       </div>
     </div>
 
+    <div class="container">
+
+      <!-- Searchbox -->
+      <div class="search-box">
+        <svg class="tool-icon" role="img" aria-label="location">
+          <use href="./images/sprite.svg#location-dot"></use>
+        </svg>
+        <input type="text" placeholder="Enter your location" />
+        <button type="button">
+          <svg class="tool-icon" role="img" aria-label="location">
+            <use href="./images/sprite.svg#search"></use>
+          </svg>
+        </button>
+      </div>
+
+      <!-- Weatherbox -->
+      <div class="weather">
+
+        <div class="weather__image">
+          <svg class="weather-icon" role="img" aria-label="Current weather">
+            <use href="./images/weather-icons.svg#sun"></use>
+          </svg>
+        </div>
+
+        <h1 class="weather__temp">7 &#8451</h1>
+        <h2 class="weather__city">Kharkiv</h2>
+
+        <div class="weather__details">
+          <div class="detail-box">
+            <svg class="detail-icon" role="img" aria-label="Current weather">
+              <use href="./images/weather-icons.svg#waves"></use>
+            </svg>
+            <p class="details-info">87%</p>
+            <p class="details-info">Humidity</p>
+          </div>
+
+          <div class="detail-box">
+            <svg class="detail-icon" role="img" aria-label="Current weather">
+              <use href="./images/weather-icons.svg#wind1"></use>
+            </svg>
+            <p class="details-info">87%</p>
+            <p class="details-info">Humidity</p>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
     <script type="module" src="./index.js"></script>
   </body>
 </html>
-
-<!-- <svg class="weather-icon" role="img" aria-label="cloud">
-  <use href="./images/weather-icons.svg#sun"></use>
-</svg> -->
