--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,14 @@
         <svg class="tool-icon" role="img" aria-label="location">
           <use href="./images/sprite.svg#location-dot"></use>
         </svg>
-        <input id="search-input" class="search-input" type="text" name="cityname" placeholder="Enter your location"/>
+        <input 
+          id="search-input" 
+          class="search-input"
+          type="text" 
+          name="cityname" 
+          placeholder="Enter your location"
+          autocomplete="off"
+          />
         <button id="search-button" class="search-button" type="submit">
           <svg class="tool-icon" role="img" aria-label="location">
             <use href="./images/sprite.svg#search"></use>
